--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ node_modules/
 package-lock.json
 /__tests__/*.dylib
 /__tests__/*.node
+/__tests__/_/libtonclientnodejs.dylib
+/__tests__/_/tonclient.node
